Feature - taillwind | design header - footer

--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="app">
@@ -14,8 +15,7 @@
         <div class="container">
             {{{body}}}
         </div>
-
-        <footer>
+        <footer class="p-4 bg-white sm:p-6 dark:bg-gray-800">
             {{>footer}}
         </footer>
     </div>
