Design Home Page ( Nav, Hero )

--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MOTOGO Dịch Vụ Cho Thuê Xe Máy Chuyên Nghiệp Việt Nam</title>
+    <link rel="shortcut icon" href="./assets/img/moto-icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="app">
-        <header>
+        <header class="bg-neutral-300">
             {{>header}}
         </header>
 
-        <div class="container">
+        <div>
             {{{body}}}
         </div>
-        <footer class="p-4 bg-white sm:p-6 dark:bg-gray-800">
+        
+        <footer class="p-4 bg-neutral-300 sm:p-6 dark:bg-gray-800">
             {{>footer}}
         </footer>
     </div>
