--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,117 @@
-<h1>Welcome!</h1>
+<!-- Section: Design Block -->
+<section class="mb-14">
+    <!-- Jumbotron -->
+    <div class="relative overflow-hidden bg-cover bg-no-repeat" style="
+            background-position: 50%;
+            background-image: url('./assets/img/MOTOGO-cho-thue-xe-may-Ha-Noi.jpg');
+            height: 750px;
+        ">
+        <div
+        class="absolute top-0 right-0 bottom-0 left-0 h-full w-full overflow-hidden bg-[hsla(0,0%,0%,0.75)] bg-fixed">
+        <div class="flex h-full items-center justify-center">
+            <div class="px-6 text-center text-white md:px-12">
+            <h1 class="mt-2 mb-16 text-5xl font-bold tracking-tight md:text-6xl xl:text-7xl">
+                The best offer on the market <br /><span>for your business</span>
+            </h1>
+            <button type="button"
+                class="rounded border-2 border-neutral-50 px-[46px] pt-[14px] pb-[12px] text-sm font-medium uppercase leading-normal text-neutral-50 transition duration-150 ease-in-out hover:border-neutral-100 hover:bg-neutral-100 hover:bg-opacity-10 hover:text-neutral-100 focus:border-neutral-100 focus:text-neutral-100 focus:outline-none focus:ring-0 active:border-neutral-200 active:text-neutral-200"
+                data-te-ripple-init data-te-ripple-color="light">
+                Get started
+            </button>
+            </div>
+        </div>
+        </div>
+    </div>
+    <!-- Jumbotron -->
+</section>
+<!-- Section: Design Block -->
+
+<div class="flex h-full items-center justify-center">
+    <div class="px-6 text-center text-black md:px-12">
+        <h1 class="mt-2 mb-8 text-3xl font-bold tracking-tight">
+            THUÊ XE MÁY TẠI
+        </h1>
+    </div>
+</div>
+
+<div class="grid-cols-1 sm:grid md:grid-cols-3 ">
+    <div
+        class="mx-3 mt-6 flex flex-col rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
+        <a href="#!">
+        <img
+            class="rounded-t-lg"
+            src="https://tecdn.b-cdn.net/img/new/standard/city/041.webp"
+            alt="Hollywood Sign on The Hill" />
+        </a>
+        <div class="p-6">
+        <h5
+            class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
+            Card title
+        </h5>
+        <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
+            This is a longer card with supporting text below as a natural
+            lead-in to additional content. This content is a little bit
+            longer.
+        </p>
+        </div>
+    </div>
+    <div
+        class="mx-3 mt-6 flex flex-col rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
+        <a href="#!">
+        <img
+            class="rounded-t-lg"
+            src="https://tecdn.b-cdn.net/img/new/standard/city/042.webp"
+            alt="Palm Springs Road" />
+        </a>
+        <div class="p-6">
+        <h5
+            class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
+            Card title
+        </h5>
+        <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
+            This is a longer card with supporting text below as a natural
+            lead-in to additional content. This content is a little bit
+            longer.
+        </p>
+        </div>
+    </div>
+    <div
+        class="mx-3 mt-6 flex flex-col rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
+        <a href="#!">
+        <img
+            class="rounded-t-lg"
+            src="https://tecdn.b-cdn.net/img/new/standard/city/044.webp"
+            alt="Skyscrapers" />
+        </a>
+        <div class="p-6">
+        <h5
+            class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
+            Card title
+        </h5>
+        <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
+            This is a longer card with supporting text below as a natural
+            lead-in to additional content.
+        </p>
+        </div>
+    </div>
+    <div
+        class="mx-3 mt-6 flex flex-col rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
+        <a href="#!">
+        <img
+            class="rounded-t-lg"
+            src="https://tecdn.b-cdn.net/img/new/standard/city/043.webp"
+            alt="Los Angeles Skyscrapers" />
+        </a>
+        <div class="p-6">
+        <h5
+            class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
+            Card title
+        </h5>
+        <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
+            This is a longer card with supporting text below as a natural
+            lead-in to additional content. This content is a little bit
+            longer.
+        </p>
+        </div>
+    </div>
+</div>
