--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOTOGO Dịch Vụ Cho Thuê Xe Máy Chuyên Nghiệp Việt Nam</title>
-    <link rel="shortcut icon" href="./assets/img/moto-icon.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="/assets/img/moto-icon.jpg" type="image/x-icon">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css"  rel="stylesheet" />
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <div class="app">
+    <div class="flex flex-col min-h-screen">
         <header class="bg-neutral-300">
             {{>header}}
         </header>
 
-        <div>
+        <div class="flex-grow">
             {{{body}}}
-        </div>
+        </div >
         
         <footer class="p-4 bg-neutral-300 sm:p-6 dark:bg-gray-800">
             {{>footer}}
         </footer>
     </div>
+    {{!-- <script src="../path/to/flowbite/dist/flowbite.min.js"></script> --}}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
 </body>
 </html>
