--- a/src/resources/views/login.hbs
+++ b/src/resources/views/login.hbs
@@ -1,5 +1,11 @@
 <section class="bg-gray-50 dark:bg-gray-900">
     <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
+
+        {{#if messages}}
+            
+            {{>flashMessage parameter=messages }}
+        {{/if}}
+
         <p class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
             <img class="w-8 h-8 mr-2" src="./assets/img/moto-icon.jpg" alt="logo">
             MOTOGO
