--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -39,5 +39,6 @@
     {{!-- <script src="../path/to/flowbite/dist/flowbite.min.js"></script> --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/datepicker.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 </body>
 </html>
