--- a/src/resources/views/motorcycle.hbs
+++ b/src/resources/views/motorcycle.hbs
@@ -22,6 +22,7 @@
                                 <th class="text-left py-2 px-4 bg-grey-lightest font-bold uppercase text-sm text-grey-light border-b border-grey-light">Tên</th>
                                 <th class="text-left py-2 px-4 bg-grey-lightest font-bold uppercase text-sm text-grey-light border-b border-grey-light">Biển số</th>
                                 <th class="text-left py-2 px-4 bg-grey-lightest font-bold uppercase text-sm text-grey-light border-b border-grey-light">Trạng thái</th>
+                                <th class="text-left py-2 px-4 bg-grey-lightest font-bold uppercase text-sm text-grey-light border-b border-grey-light">Giá</th>
                                 <th class="text-left py-2 px-4 bg-grey-lightest font-bold uppercase text-sm text-grey-light border-b border-grey-light">Chỉnh sửa</th>
                             </tr>
                         </thead>
@@ -32,6 +33,7 @@
                                     <td class="py-2 px-4 border-b border-grey-light">{{this.name}}</td>
                                     <td class="py-2 px-4 border-b border-grey-light">{{this.license_plate}}</td>
                                     <td class="py-2 px-4 border-b border-grey-light">{{this.status}}</td>
+                                    <td class="py-2 px-4 border-b border-grey-light">{{this.price_per_day}}</td>
                                     <td class="py-2 px-4 border-b border-grey-light"><a href=""><i class="fa-solid fa-pen-to-square"></i></a></td>
                                 </tr>
                             {{/each}}
