--- a/src/resources/views/motorcycle_create.hbs
+++ b/src/resources/views/motorcycle_create.hbs
@@ -21,6 +21,10 @@
                         <input type="text" name="license_plate" id="license_plate" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="65-F1 99999" required="">
                     </div>
                     <div>
+                        <label for="price_per_day" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Giá mỗi ngày</label>
+                        <input type="text" name="price_per_day" id="price_per_day" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="200000" required="">
+                    </div>
+                    <div>
                         <input type="text" placeholder="Air Blade 125/160" name="location" id="location" class="hidden" required="" value="{{location_id}}">
                     </div>
                     <button type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Thêm</button>
