--- a/src/resources/views/reservation_motorcycle.hbs
+++ b/src/resources/views/reservation_motorcycle.hbs
@@ -1,40 +1,40 @@
 <div class="px-24 py-12 mt-5 flex flex-row w-full items-center justify-between mx-auto lg:py-0">
     
     <div>
-        <div class="my-5 flex w-full max-w-7xl bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-            
-            <img class="p-8 object-contain h-48 w-80" src="/assets/img/cho-thue-xe-may-ha-noi.png" alt="product image" />
-            
-            <div class="px-5 pb-5">
-                <h2 class="py-2 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">Yamaha Sirius 110cc</h2>
+        {{#each motor}}
+            <div class="my-5 flex w-full max-w-7xl bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
                 
-                <div class="flex flex-col ">
-                    <p class="text-sm dark:text-white">Mũ bảo hiểm 1/2 đầu</p>
-                    <p class="text-sm dark:text-white">Áo mưa 1 lần</p>
-                    <p class="text-sm dark:text-white">Bảo hiểm xe máy</p>
-                    <p class="text-sm dark:text-white">Đăng ký xe photo</p>
-                    <p class="text-sm dark:text-white">Dịch vụ cứu hộ</p>
+                <img class="p-8 object-contain h-48 w-80" src="/assets/img/cho-thue-xe-may-ha-noi.png" alt="product image" />
+                
+                <div class="px-5 pb-5">
+                    <h2 class="py-2 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">{{this.name}}</h2>
+                    
+                    <div class="flex flex-col ">
+                        <p class="text-sm dark:text-white">Mũ bảo hiểm 1/2 đầu</p>
+                        <p class="text-sm dark:text-white">Áo mưa 1 lần</p>
+                        <p class="text-sm dark:text-white">Bảo hiểm xe máy</p>
+                        <p class="text-sm dark:text-white">Đăng ký xe photo</p>
+                        <p class="text-sm dark:text-white">Dịch vụ cứu hộ</p>
 
+                    </div>
+                    
                 </div>
-                
+
+                <form action="" method="post">
+                    <input type="text" hidden value="" name="motor" >
+                    <div class="mr-4 w-full max-w-sm p-4 bg-white border border-gray-200 shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
+                        <h5 class="mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">₫{{this.price_per_day}}/Ngày</h5>
+                        <div class="flex items-baseline text-gray-900 dark:text-white">
+                            không bao gồm thuế và bảo hiểm
+                        </div>
+                        <div class="flex items-baseline text-gray-900 dark:text-white">
+                            không bao gồm thuế và bảo hiểm
+                        </div>
+                        <button class="mt-4 ml-36 text-white bg-yellow-400 hover:bg-yellow-400 focus:ring-4 focus:outline-none focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-yellow-400 dark:hover:bg-yellow-400 dark:focus:ring-yellow-400">THUÊ XE</button>
+                    </div>
+                </form>
             </div>
-
-            <form action="" method="post">
-                <input type="text" hidden value="" name="motor" >
-                <div class="mr-4 w-full max-w-sm p-4 bg-white border border-gray-200 shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
-                    <h5 class="mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">₫130.000 /Ngày</h5>
-                    <div class="flex items-baseline text-gray-900 dark:text-white">
-                        không bao gồm thuế và bảo hiểm
-                    </div>
-                    <div class="flex items-baseline text-gray-900 dark:text-white">
-                        không bao gồm thuế và bảo hiểm
-                    </div>
-                    <button class="mt-4 ml-36 text-white bg-yellow-400 hover:bg-yellow-400 focus:ring-4 focus:outline-none focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-yellow-400 dark:hover:bg-yellow-400 dark:focus:ring-yellow-400">THUÊ XE</button>
-                </div>
-            </form>
-        </div>
-
-        
+        {{/each}}
     </div>
 
     
@@ -42,17 +42,17 @@
 
         <h5 class="mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">Thông tin nhận xe</h5>
         <div class="flex items-baseline text-gray-900 dark:text-white">
-            <span class="text-3xl font-semibold">18/10/2023</span>
+            <span class="text-3xl font-semibold">{{schedule.time_rental}}</span>
             
         </div>
-        <p>Vị Trí: Địa chỉ của khách tại Hà Nội</p>
+        <p>Vị Trí: {{schedule.start}}</p>
         
         <h5 class="mt-2 mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">Thông tin trả xe</h5>
         <div class="flex items-baseline text-gray-900 dark:text-white">
-            <span class="block text-3xl font-semibold">18/10/2023</span>
+            <span class="block text-3xl font-semibold">{{schedule.time_rental}}</span>
             
         </div>
-        <p>Vị Trí: Địa chỉ của khách tại Hà Nội</p>
+        <p>Vị Trí: {{schedule.end}}</p>
     </div>
 
 
