--- a/src/resources/views/reservation_motorcycle.hbs
+++ b/src/resources/views/reservation_motorcycle.hbs
@@ -20,8 +20,8 @@
                     
                 </div>
 
-                <form action="" method="post">
-                    <input type="text" hidden value="" name="motor" >
+                <form action="/reservation/accessory" method="post">
+                    <input type="text" id="id" name="id" class="hidden" value="{{this._id}}">
                     <div class="mr-4 w-full max-w-sm p-4 bg-white border border-gray-200 shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
                         <h5 class="mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">₫{{this.price_per_day}}/Ngày</h5>
                         <div class="flex items-baseline text-gray-900 dark:text-white">
