--- a/src/resources/views/partials/sidebar.hbs
+++ b/src/resources/views/partials/sidebar.hbs
@@ -9,6 +9,9 @@
         <a class="block text-gray-500 py-2.5 px-4 my-4 rounded transition duration-200 hover:bg-gradient-to-r hover:from-cyan-400 hover:to-cyan-300 hover:text-white" href="/admin/location">
             <i class="fa-solid fa-map mr-2"></i>Location
         </a>
+        <a class="block text-gray-500 py-2.5 px-4 my-4 rounded transition duration-200 hover:bg-gradient-to-r hover:from-cyan-400 hover:to-cyan-300 hover:text-white" href="/admin/location">
+            <i class="mr-2 fa-solid fa-shoe-prints"></i>Accessory
+        </a>
         <a class="block text-gray-500 py-2.5 px-4 my-4 rounded transition duration-200 hover:bg-gradient-to-r hover:from-cyan-400 hover:to-cyan-300 hover:text-white" href="/admin/rental">
             <i class="fa-solid fa-clipboard mr-2"></i>Rental
         </a>
