--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -28,7 +28,7 @@
             {{>header}}
         </header>
 
-        <div class="flex-grow">
+        <div class="">
             {{{body}}}
         </div >
         
