--- a/src/resources/views/reservation_schedule.hbs
+++ b/src/resources/views/reservation_schedule.hbs
@@ -65,7 +65,7 @@
 
 
                         <div class="flex ">
-                            <select id="pickup_location" name="pickup_location">
+                            <select id="return_location" name="return_location">
                                 {{#each location}}
                                     <option value="{{this.address}}">{{this.address}}</option>
                                 {{/each}}
