--- a/src/resources/views/reservation_accessory.hbs
+++ b/src/resources/views/reservation_accessory.hbs
@@ -1,23 +1,63 @@
 <div class="bg-gray-400 ">
-    <div class="flex flex-row min-h-screen justify-between mx-12 my-12">
-        <div class=" bg-gray-100 border w-2/3 ">TEST</div>
-        <div class=" bg-gray-100 border w-96">
-            <div class="w-full max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
-
-            <h5 class="mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">Thông tin nhận xe</h5>
-            <div class="flex items-baseline text-gray-900 dark:text-white">
-                <span class="text-3xl font-semibold">{{schedule.time_rental}}</span>
-                
-            </div>
-            <p>Vị Trí: {{schedule.start}}</p>
+    <form action="">
+        <div class="flex flex-row min-h-screen justify-between mx-12 my-12">
+            <div class=" bg-gray-100 border w-2/3 flex flex-col">
+                <h2 class="mx-3 my-3 border-b-4 inline-block text-xl">DỊCH VỤ</h2>
+                <div class="flex border mx-3 my-3 justify-between">
             
-            <h5 class="mt-2 mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">Thông tin trả xe</h5>
-            <div class="flex items-baseline text-gray-900 dark:text-white">
-                <span class="block text-3xl font-semibold">{{schedule.time_rental}}</span>
-                
+                    <div>
+                        <img class="p-8 object-contain h-48 w-80" src="/assets/img/cho-thue-xe-may-ha-noi.png" alt="product image" />
+                    </div>
+                        
+                    <div class="px-5 pb-5">
+                        <h2 class="py-2 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">{{this.name}}</h2>
+                        
+                        <div class="flex flex-col ">
+                            <p class="text-sm dark:text-white">Mũ bảo hiểm 1/2 đầuMũ bảo hiểm 1/2 đầuMũ bảo hiểm 1/2 đầuMũ bảo hiểm 1/2 đầu</p>
+                            <p class="text-sm dark:text-white">Áo mưa 1 lần</p>
+                            <p class="text-sm dark:text-white">Bảo hiểm xe máy</p>
+                            <p class="text-sm dark:text-white">Đăng ký xe photo</p>
+                            <p class="text-sm dark:text-white">Dịch vụ cứu hộ</p>
+
+                        </div>
+                        
+                    </div>
+
+                    <div>
+                        {{!-- <form action="/reservation/motorcycles" method="post">
+                            <input type="text" id="id" name="id" class="hidden" value="{{this._id}}">
+                            <div >
+                                <h5 class="mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">₫{{this.price_per_day}}/Ngày</h5>
+                                <div class="flex items-baseline text-gray-900 dark:text-white">
+                                    không bao gồm thuế và bảo hiểm
+                                </div>
+                                <div class="flex items-baseline text-gray-900 dark:text-white">
+                                    không bao gồm thuế và bảo hiểm
+                                </div>
+                                
+                            </div>
+                        </form> --}}
+                    </div>
+                </div>
             </div>
-            <p>Vị Trí: {{schedule.end}}</p>
+            <div class=" ml-6 bg-gray-100 border w-96">
+                <div class="w-full max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
+
+                <h5 class="mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">Thông tin nhận xe</h5>
+                <div class="flex items-baseline text-gray-900 dark:text-white">
+                    <span class="text-3xl font-semibold">{{schedule.time_rental}}</span>
+                    
+                </div>
+                <p>Vị Trí: {{schedule.start}}</p>
+                
+                <h5 class="mt-2 mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">Thông tin trả xe</h5>
+                <div class="flex items-baseline text-gray-900 dark:text-white">
+                    <span class="block text-3xl font-semibold">{{schedule.time_rental}}</span>
+                    
+                </div>
+                <p>Vị Trí: {{schedule.end}}</p>
+                <button class="mt-4 ml-36 text-white bg-yellow-400 hover:bg-yellow-400 focus:ring-4 focus:outline-none focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-yellow-400 dark:hover:bg-yellow-400 dark:focus:ring-yellow-400">THUÊ XE</button>
+            </div>
         </div>
-        </div>
-    </div>
+    </form>
 </div>
