--- a/src/resources/views/reservation_motorcycle.hbs
+++ b/src/resources/views/reservation_motorcycle.hbs
@@ -1,59 +1,59 @@
-<div class="px-24 py-12 mt-5 flex flex-row w-full items-center justify-between mx-auto lg:py-0">
-    
-    <div>
-        {{#each motor}}
-            <div class="my-5 flex w-full max-w-7xl bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-                
-                <img class="p-8 object-contain h-48 w-80" src="/assets/img/cho-thue-xe-may-ha-noi.png" alt="product image" />
-                
-                <div class="px-5 pb-5">
-                    <h2 class="py-2 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">{{this.name}}</h2>
-                    
-                    <div class="flex flex-col ">
-                        <p class="text-sm dark:text-white">Mũ bảo hiểm 1/2 đầu</p>
-                        <p class="text-sm dark:text-white">Áo mưa 1 lần</p>
-                        <p class="text-sm dark:text-white">Bảo hiểm xe máy</p>
-                        <p class="text-sm dark:text-white">Đăng ký xe photo</p>
-                        <p class="text-sm dark:text-white">Dịch vụ cứu hộ</p>
-
+<div class="">
+    <div class="flex flex-row min-h-screen justify-between mx-12 my-12">
+        <div class=" bg-gray-100 border w-2/3 flex flex-col">
+            <h2 class="mx-3 my-3 border-b-4 inline-block text-xl">THUÊ XE</h2>
+            {{#each motor}}
+            <div class="flex border mx-3 my-3 justify-between">
+        
+                <div class="flex flex-row">
+                    <div>
+                        <img class="p-8 object-contain h-48 w-80" src="/assets/img/cho-thue-xe-may-ha-noi.png" alt="product image" />
                     </div>
-                    
+                        
+                    <div class="flex flex-col my-3 ml-6">
+                        <p class="mt-3 text-3xl">{{this.name}}</p>
+                        <p class="text-sm mt-1">- Mũ bảo hiểm 1/2 </p>
+                        <p class="text-sm mt-1">- Áo mưa 1 lần</p>
+                        <p class="text-sm mt-1">- Bảo hiểm xe máy</p>
+                        <p class="text-sm mt-1">- Đăng ký xe photo</p>
+                        <p class="text-sm mt-1">- Dịch vụ cứu hộ</p>
+                    </div>
                 </div>
 
-                <form action="/reservation/motorcycles" method="post">
-                    <input type="text" id="id" name="id" class="hidden" value="{{this._id}}">
-                    <div class="mr-4 w-full max-w-sm p-4 bg-white border border-gray-200 shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
-                        <h5 class="mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">₫{{this.price_per_day}}/Ngày</h5>
-                        <div class="flex items-baseline text-gray-900 dark:text-white">
-                            không bao gồm thuế và bảo hiểm
+                <div class="my-3">
+                    <form action="/reservation/motorcycles" method="post">
+                        <input type="text" id="id" name="id" class="hidden" value="{{this._id}}">
+                        <div class="flex flex-col justify-end">
+                            <div class="mr-3 mt-3 font-medium text-right">{{this.price_per_day}}₫/Ngày</div>
+                            <div class="mr-3 my-1 text-right">
+                                không bao gồm thuế và bảo hiểm
+                            </div>
+                            
+                            <div class="mr-3 my-1 text-right">
+                                <button class="bg-yellow-400 font-medium  px-5 py-2.5 text-center">THUÊ XE</button>
+                            </div>
                         </div>
-                        <div class="flex items-baseline text-gray-900 dark:text-white">
-                            không bao gồm thuế và bảo hiểm
-                        </div>
-                        <button class="mt-4 ml-36 text-white bg-yellow-400 hover:bg-yellow-400 focus:ring-4 focus:outline-none focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-yellow-400 dark:hover:bg-yellow-400 dark:focus:ring-yellow-400">THUÊ XE</button>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
-        {{/each}}
-    </div>
-
-    
-    <div class="w-full max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
-
-        <h5 class="mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">Thông tin nhận xe</h5>
-        <div class="flex items-baseline text-gray-900 dark:text-white">
-            <span class="text-3xl font-semibold">{{schedule.time_rental}}</span>
-            
+            {{/each}}
         </div>
-        <p>Vị Trí: {{schedule.start}}</p>
-        
-        <h5 class="mt-2 mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">Thông tin trả xe</h5>
-        <div class="flex items-baseline text-gray-900 dark:text-white">
-            <span class="block text-3xl font-semibold">{{schedule.time_rental}}</span>
-            
+        <div class=" ml-6 bg-gray-100 border w-96 flex flex-col">
+            <div class="h-64 mx-4 my-4 border">
+                <div class="mx-4 my-2 ">
+                    <p class="mt-3 text-xl font-bold">Thông tin nhận xe</p>
+                    <p class="text-sm mt-1">{{schedule.start_day}}</p>
+                    <p class="text-sm mt-1">Vị Trí: {{schedule.pickup_location}}</p>
+                </div>
+                <div class="mx-4 my-2 ">
+                    <p class="mt-3 text-xl font-bold">Thông tin trả xe</p>
+                    <p class="text-sm mt-1">{{schedule.end_day}}</p>
+                    <p class="text-sm mt-1">Vị Trí: {{schedule.return_location}}</p>
+                </div>
+            </div>
+            <div class="h-48 mx-4 my-4 border">
+                Thông tin nhận xe
+            </div>
         </div>
-        <p>Vị Trí: {{schedule.end}}</p>
     </div>
-
-
 </div>
