--- a/src/resources/views/motorcycle.hbs
+++ b/src/resources/views/motorcycle.hbs
@@ -13,7 +13,13 @@
             </div>
 
             <div class="bg-white p-4 rounded-md mt-4">
-                <h2 class="text-gray-500 text-lg font-semibold pb-4">Thông tin người dùng</h2>
+                <div class="flex justify-between">
+                    <h2 class="text-gray-500 text-lg font-semibold pb-4">Thông tin người dùng</h2>
+                    <div>
+                        <h2 class="text-gray-500 text-lg font-semibold pb-4 inline">Tổng số lượng hợp đồng: </h2>
+                        <h2 class="text-lg font-semibold pb-4 inline text-red-500 ">{{motorcycle.length}}</h2>
+                    </div>
+                </div>
                 <div class="bg-gradient-to-r from-cyan-300 to-cyan-500 h-px mb-6"></div>
                     <table class="w-full table-auto text-sm">
                         <thead>
@@ -33,7 +39,7 @@
                                     <td class="py-2 px-4 border-b border-grey-light">{{this.name}}</td>
                                     <td class="py-2 px-4 border-b border-grey-light">{{this.license_plate}}</td>
                                     <td class="py-2 px-4 border-b border-grey-light">{{this.status}}</td>
-                                    <td class="py-2 px-4 border-b border-grey-light">{{this.price_per_day}}</td>
+                                    <td class="py-2 px-4 border-b border-grey-light">{{VND_format this.price_per_day}}</td>
                                     <td class="py-2 px-4 border-b border-grey-light"><a href=""><i class="fa-solid fa-pen-to-square"></i></a></td>
                                 </tr>
                             {{/each}}
