--- a/src/resources/views/reservation_infos.hbs
+++ b/src/resources/views/reservation_infos.hbs
@@ -9,17 +9,17 @@
                         <label for="last_name" class="bold">Họ</label>
                         <input id="last_name" name="last_name" class="block w-full mb-2 mt-1" type="text">
                         <label for="email" class="bold">Email</label>
-                        <input id="email" name="email" class="block w-full mb-2 mt-1" type="text">
+                        <input id="email" name="email" class="block w-full mb-2 mt-1" type="text" value="{{schedule.email}}">
                         <label for="address" class="bold">Địa chỉ</label>
                         <input id="address" name="address" class="block w-full mb-2 mt-1" type="text">
                         Giới tính
                         <div class="flex flex-row mt-1">
                             <div>
-                                <input id="male" name="male" value="male" " mb-2 mt-1" type="radio">
+                                <input id="gender" name="gender" value="M" " mb-2 mt-1" type="radio">
                                 <label for="male" class="bold">Nam</label>
                             </div>
                             <div>
-                                <input id="female" name="female" value="female" class="ml-2 mb-2 mt-1" type="radio">
+                                <input id="gender" name="gender" value="F" class="ml-2 mb-2 mt-1" type="radio">
                                 <label for="female" class="bold">Nữ</label>
                             </div>
                         </div>
@@ -28,7 +28,7 @@
                         <label for="first_name" class="bold">Tên</label>
                         <input id="first_name" name="first_name" class="block w-full mb-2 mt-1" type="text">
                         <label for="phone" class="bold">Số điện thoại</label>
-                        <input id="phone" name="phone" class="block w-full mb-2 mt-1" type="text">
+                        <input id="phone" name="phone" class="block w-full mb-2 mt-1" type="number">
                         <label for="birth_date" class="bold">Ngày sinh</label>
                         <input id="birth_date" name="birth_date" class="block w-full mb-2 mt-1" type="date">
                         <label for="note">Ghi chú</label>
@@ -56,7 +56,7 @@
                 <div class="mx-4 mt-8 ">
                     <p class="mt-3 text-xl font-bold">Thông tin thuê xe</p>
                     <p class="text-sm mt-1">{{motor.name}}</p>
-                    <p class="text-sm mt-1">Giá: {{motor.price_per_day}}₫/Ngày</p>
+                    <p class="text-sm mt-1">Giá: {{VND_format motor.price_per_day}}/Ngày</p>
                 </div>
             </div>
             <div class="h-80 mx-4 my-4 border">
