--- a/src/resources/views/reservation_schedule.hbs
+++ b/src/resources/views/reservation_schedule.hbs
@@ -41,9 +41,9 @@
                     </div>
                     <label class="mr-4">Chọn thời gian thuê:</label>
 
-                    <input type="time" id="time_rental" name="time_rental" min="09:00" max="18:00" required />
+                    <input type="time" id="time_rental" name="time_rental" required />
                     <span class="mx-4 text-gray-500">to</span>
-                    <input type="time" id="time_rental" name="time_rental" min="09:00" max="18:00" required />
+                    <input type="time" id="time_rental" name="time_rental" required />
 
                     <br>
 
