--- a/src/resources/views/rental_detail.hbs
+++ b/src/resources/views/rental_detail.hbs
@@ -15,10 +15,10 @@
             <div class="bg-white p-4 rounded-md mt-4">
                 <div class="flex justify-between">
                     <h2 class="text-gray-500 text-lg font-semibold pb-4">Chi tiết hợp đồng</h2>
-                    <div>
+                    {{!-- <div>
                         <h2 class="text-gray-500 text-lg font-semibold pb-4 inline">Tổng chi phí: </h2>
-                        <h2 class="text-lg font-semibold pb-4 inline text-red-500 ">{{rental.length}}</h2>
-                    </div>
+                        <h2 class="text-lg font-semibold pb-4 inline text-red-500 ">{{rental.}}</h2>
+                    </div> --}}
                 </div>
                 <div class="bg-gradient-to-r from-cyan-300 to-cyan-500 h-px mb-6"></div>
                     <table class="w-full table-auto text-sm">
@@ -27,9 +27,10 @@
                                 <th class="text-left py-2 px-4 bg-grey-lightest font-bold uppercase text-sm text-grey-light border-b border-grey-light">Tên người thuê</th>
                                 <th class="text-left py-2 px-4 bg-grey-lightest font-bold uppercase text-sm text-grey-light border-b border-grey-light">SDT</th>
                                 <th class="text-left py-2 px-4 bg-grey-lightest font-bold uppercase text-sm text-grey-light border-b border-grey-light">Địa chỉ</th>
-                                <th class="text-left py-2 px-4 bg-grey-lightest font-bold uppercase text-sm text-grey-light border-b border-grey-light">Xe Thuê</th>
+                                <th class="text-left py-2 px-4 bg-grey-lightest font-bold uppercase text-sm text-grey-light border-b border-grey-light">Loại xe</th>
                                 <th class="text-left py-2 px-4 bg-grey-lightest font-bold uppercase text-sm text-grey-light border-b border-grey-light">Thời gian</th>
-                                <th class="text-left py-2 px-4 bg-grey-lightest font-bold uppercase text-sm text-grey-light border-b border-grey-light">Vị trí thuê</th>
+                                <th class="text-left py-2 px-4 bg-grey-lightest font-bold uppercase text-sm text-grey-light border-b border-grey-light">Tổng chi phí</th>
+                                <th class="text-left py-2 px-4 bg-grey-lightest font-bold uppercase text-sm text-grey-light border-b border-grey-light">Thao tác</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -38,15 +39,17 @@
                                 <td class="py-2 px-4 border-b border-grey-light">{{rental.info.phone}}</td>
                                 <td class="py-2 px-4 border-b border-grey-light">{{rental.info.address}}</td>
                                 <td class="py-2 px-4 border-b border-grey-light">{{rental.motor.name}}</td>
-                                <td class="py-2 px-4 border-b border-grey-light">{{rental.info.address}}</td>
-                                <td class="py-2 px-4 border-b border-grey-light">{{rental.info.address}}</td>
+                                <td class="py-2 px-4 border-b border-grey-light">{{formatDate rental.rental_start_date}} - {{formatDate rental.rental_end_date}}</td>
+                                <td class="py-2 px-4 border-b border-grey-light">{{VND_format rental.total}}</td>
                                 <td class="py-2 px-4 border-b border-grey-light">
-                                    <button type="button" class="bg-{{this.status}}-400 hover:bg-{{this.status}}-400 text-white font-semibold py-2 px-4 rounded">{{this.status}}</button>
-                                </td>
-                                <td class="py-2 px-4 border-b border-grey-light">
-                                    <a href="/admin/rental/{{this._id}}/">
-                                        <i class="fa-solid fa-info"></i>
-                                    </a>
+                                    <form class="inline" action="/admin/rental/{{rental._id}}" method="post">
+                                        <input type="hidden" name="_status" value="APPROVE">
+                                        <button class="inline "><i class="fa-sharp fa-solid fa-check bg-APPROVE-400"></i></button>
+                                    </form>
+                                    <form class="inline" action="/admin/rental/{{rental._id}}" method="post">
+                                        <input type="hidden" name="_status" value="REJECT">
+                                        <button class="inline"><i class="bg-REJECT-400 fa-sharp fa-solid fa-xmark ml-4"></i></button>
+                                    </form>
                                 </td>
                             </tr>
                         </tbody>
